--- a/index.html
+++ b/index.html
@@ -1,1 +1,47 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Order Form</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <div class="container">
+    <h2>Place Your Order</h2>
+    <form action="https://ms-nabil.app.n8n.cloud/webhook-test/order-inventory" method="POST">
+      <label>Name:</label>
+      <input type="text" name="Name" required>
+      <label>Email:</label>
+      <input type="email" name="Email" required>
+      <label>Phone Number:</label>
+      <input type="tel" name="Number" required>
+      <label>Product:</label>
+      <select name="Product" required>
+        <option value="T-Shirt">T-Shirt</option>
+        <option value="Shoes">Shoes</option>
+      </select>
+      <label>Size:</label>
+      <select name="Size" required>
+        <option value="M">M</option>
+        <option value="L">L</option>
+        <option value="XL">XL</option>
+        <option value="XXL">XXL</option>
+      </select>
+      <label>Color:</label>
+      <select name="Color" required>
+        <option value="Black">Black</option>
+        <option value="White">White</option>
+      </select>
+      <label>Wilaya:</label>
+      <select name="Wilaya" required>
+        <option value="Algiers">Algiers</option>
+        <option value="Blida">Blida</option>
+        <option value="Oran">Oran</option>
+        <option value="Constantine">Constantine</option>
+        <option value="Tizi Ouzou">Tizi Ouzou</option>
+      </select>
+      <button type="submit">Submit Order</button>
+    </form>
+  </div>
+</body>
+</html>
